fix on iOS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,4 +46,5 @@ video {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  pointer-events: none;
 }
